Sculpt: Mask operators missing drawing update on meshes with shapekeys/modifiers #81929

Closed
opened 2020-10-21 18:46:35 +02:00 by Philipp Oeser · 6 comments
Member

System Information
Operating system: Linux-5.8.4-200.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-17 21:36, hash: f425f40c4e
Worked: never?

Short description of error
Sculpt: Mask operators missing drawing update on meshes with shapekeys/modifiers

Exact steps for others to reproduce the error
sculpt_mask_operators_missing_drawing_update_modifiers.blend

  • Open .blend
  • Draw a box mask (using the Box Mask tool)
  • no mask is drawn
  • choose the Mask tool and do a stroke
  • see the mask updating (including the now appearing mask from the Box Mask tool)

This fails for all mask filters (sharper, grow, invert, clear, shrink, contrast, smooth) and mask gestures (box, lasso)

**System Information** Operating system: Linux-5.8.4-200.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-17 21:36, hash: `f425f40c4e` Worked: never? **Short description of error** Sculpt: Mask operators missing drawing update on meshes with shapekeys/modifiers **Exact steps for others to reproduce the error** [sculpt_mask_operators_missing_drawing_update_modifiers.blend](https://archive.blender.org/developer/F9028618/sculpt_mask_operators_missing_drawing_update_modifiers.blend) - Open .blend - Draw a box mask (using the `Box Mask` tool) - no mask is drawn - choose the `Mask` tool and do a stroke - see the mask updating (including the now appearing mask from the `Box Mask` tool) This fails for all mask filters (sharper, grow, invert, clear, shrink, contrast, smooth) and mask gestures (box, lasso)
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-10-21 18:47:00 +02:00

This issue was referenced by d2f52dccd3

This issue was referenced by d2f52dccd39ba6fb29c099e35f62559bb28548fa
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro
Member

See https://developer.blender.org/D8956
Sculpt mode was not considering that the mask and face set can be visible with modifier enabled, so these updates were never in the code.

See https://developer.blender.org/D8956 Sculpt mode was not considering that the mask and face set can be visible with modifier enabled, so these updates were never in the code.
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:09 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81929
No description provided.